@@ -538,14 +538,14 @@ sub assert_empty($;$) {
     }
 
     if ( $underlying_type eq 'HASH' ) {
-        assert_is( scalar keys %{$ref}, 0, $name );
+        return if scalar keys %{$ref} == 0;
     }
     elsif ( $underlying_type eq 'ARRAY' ) {
-        assert_is( scalar @{$ref}, 0, $name );
+        return if scalar keys @{$ref} == 0;
     }
-    else {
-        assert_fail( 'Not an array or hash reference' );
-    }
+
+    require Carp;
+    &Carp::confess( _fail_msg($name) );
 }
 
 =head2 assert_nonempty( $this [, $name ] )
